<?xml version="1.0"?>
<package format="2">
    <name>mavros_offical_msgs</name>
    <version>1.0.0</version>           <!-- offical 1.20.1 -->
    <description> avros_msgs defines messages for <a href="http://wiki.ros.org/mavros">MAVROS</a>.</description>

    <!-- offical communication -->
    <!-- <maintainer email="vooon341@gmail.com">Vladimir Ermakov</maintainer> -->
    <!-- <author email="vooon341@gmail.com">Vladimir Ermakov</author> -->

    <maintainer email="3287486878@qq.com">Xiyong Chen</maintainer>
    <author email="3287486878@qq.com">Xiyong Chen</author>

    <license>GPLv3</license>
    <license>LGPLv3</license>
    <license>BSD</license>

    <!-- offical tutorials wiki website-->
    <url type="website">http://wiki.ros.org/mavros_msgs</url>
    <url type="repository">https://github.com/mavlink/mavros.git</url>
    <url type="bugtracker">https://github.com/mavlink/mavros/issues</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>
    
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>geographic_msgs</depend>

    <!-- 指该 ROS 功能包的所有内容不依赖于特定的硬件架构或操作系统位数 -->
    <export>
        <architecture_independent/>
    </export>

</package>